fix generationTime and expirationTime